2003-11-12  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_XXX.ecm: Removed - since it was only a source of confusion.

2003-11-07  Gary Thomas  <gary@mlbassoc.com>

	* src/net/dns.c: 
	* src/net/bootp.c: 
	* include/net/net.h: Use DNS server address from DHCP if provided.
	Inspired by John Newlin <jnewlin@rawbw.com>

	* src/flash.c (fis_init): Take out misleading warning - since the
	new [default] behaviour of "fis free" means free space need not
	be necessarily erased on the device.

2003-11-04  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (find_free): Better handling of end address - otherwise
	list of free blocks could be incorrect.  Thanks to Chris Garry.

2003-11-01  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Reorg to allow disk operations on other than
	IDE drives.

2003-10-23  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c (cyg_start): Try to catch illegal memory accesses and
	other abort conditions during command execution.

2003-10-17  Gary Thomas  <gary@mlbassoc.com>

	* src/load.c: Only examine loadable segments when scanning to determine
	lowest loadable address (only used when -b XXX option used).  Otherwise,
	an offset into space could be chosen.

2003-10-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml: Fix eb40 flash install instructions.

2003-10-15  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c: 
	* src/fconfig.c: Better handling of layout of fconfig and fis
	data within the FLASH.  Should work for even flash devices with
	very smal block sizes.

	* include/redboot.h (RedBoot_INIT_SECOND): 
	Finer initialization control.

	* cdl/redboot.cdl: Combine FIS directory and FCONFIG database
	by default.  This results in better FLASH utilization. Also define
	number of FIS directory slots.  This will allow support for FLASH
	devices with very small block sizes.

2003-10-12  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_create): Verify that any hard FLASH addresses