@@ -1,3 +1,9 @@
+2003-11-13  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/main.c (do_go): Need to stop catching exceptions when running a
+	user program, otherwise GDB will never run when the program fails, gets
+	a ^C interrupt, etc.  Also, clean up [remove] some cache debug code.
+
 2003-11-12  Gary Thomas  <gary@mlbassoc.com>
 
 	* misc/redboot_XXX.ecm: Removed - since it was only a source of confusion.
